--- a/flex/UAtruth.html
+++ b/flex/UAtruth.html
@@ -37,13 +37,14 @@
                 </div>
             </div>
 
-            <div class="title-center"><p class="ua1">УКРАЇНСЬКА ПРАВДА</p>
+            <div class="title-center">
+                <p class="ua1">УКРАЇНСЬКА ПРАВДА</p>
                 <p class="ua2"> ЗАСНОВАНА ГЕОРГІЄМ ГОНГАДЗЕ У 2000 РОЦІ</p>
             </div>
 
             <div class="title-right">
                 <div class="title-right-a">
-                    УКР/РУС  
+                    УКР/РУС
                 </div>
                 <div class="title-right-b">
                     <span class="title-right-b-a">КЛУБ УП</span>
@@ -65,33 +66,7 @@
             <div class="menu-dow-blok10">АРХІВ</div>
         </div>
     </header>
-<hr>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <hr>
 
 </body>
 
